--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-modal": "^3.13.1",
+    "polished": "^4.1.4",
     "typescript": "^4.4.2"
   },
   "scripts": {
