--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dtmoney",
   "version": "0.1.0",
+  "homepage": "https://jonathanbueno.github.io/dt-money",
   "private": true,
   "dependencies": {
     "axios": "^0.25.0",
@@ -20,10 +21,13 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-modal": "^3.13.1",
+    "gh-pages": "^3.2.3",
     "polished": "^4.1.4",
     "typescript": "^4.4.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
