--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typescript": "^4.4.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
